# rpi

./: .gitignore  .gitmodules  README.md  dune-project  dune-workspace  dune-workspace.bare  dune-workspace.cross  rpi-bluetooth.opam  rpi-os.opam  rpi.opam
lib/: clock.ml  dune  gpio.ml  gpio.mli  mbox.ml  mbox.mli  pwm.mli  rpi.ml  rpi.mli  rpi_mem.c
src/bluetooth/: README.md  UART.ml  advert_data.ml  after_connect_frame  bluetooth.ml  dune  hci.ml  stubs.c
src/bluetooth/hci/: acl.ml  acl.mli  command.ml  command.mli  dune  event.ml  event.mli  hci.ml  hci.mli
src/bluetooth/l2cap/: dune  l2cap.ml
src/bluetooth/le/: LE.ml  dune
src/drivers/AUX.irq/: AUX.ml  dune
src/drivers/UART/UART.irq/: UART.ml  UART.mli  dune
src/drivers/UART/UART.poll/: Uart_poll.ml  Uart_poll.mli  dune
src/drivers/mbox/: dune  mbox.ml  mbox.mli
src/drivers/mtime.irq/: dune  mtime.ml  mtime.mli
src/drivers/ws2812b/: ws2812b.ml  ws2812b.mli
src/hardware/: dune  rpi_hardware.mli
src/hardware/bare/: dune  rpi_bare.c  rpi_hardware.ml
src/hardware/base/: dune  rpi_base.mli
src/hardware/base/rpi3/: dune  rpi_base.ml
src/hardware/base/rpi4/: dune  rpi_base.ml
src/hardware/devices/: dune  rpi_devices.ml  rpi_devices.mli
src/hardware/unix/: dune  rpi_hardware.ml  rpi_unix.c
src/interrupts/: armcore.ml  dune  interrupts.c  interrupts.ml  irqentry.S  utils.S
src/lib/: dune  mem.ml  mem.mli  mmio.ml  peripheral.ml  register.ml  register.mli  rpi_mem.c  version.ml
src/os/: OS.ml  dune  time.c  time.ml
src/peripherals/: AUX.ml  AUX.mli  DMA.ml  DMA.mli  UART.ml  UART.mli  clock.ml  clock.mli  dune  gpio.ml  gpio.mli  mailbox.ml  mailbox.mli  mbox.ml  mbox.mli  mtime.ml  mtime.mli  pwm.ml  pwm.mli  serial.ml  serial.mli
src/unix/: dune  rpi_unix.ml  rpi_unix.mli
src/ws2812b/: dune  ws2812b.ml  ws2812b.mli
test/: dune  main.ml
test/bare-metal/: dune  main.c  main.ml
test/bare-metal/jack_port/: dune  main.ml
test/bare-metal/os/: dune
test/unix/: dune  main.ml
test/unix/bluetooth/: README.md  dune  main  main.ml
test/unix/bluetooth/server/: main.js  package.json
test/unix/dma/: dune  main.ml  main_stubs.c
test/unix/garland/: dune  main.ml
test/unix/jack_port/: dune  main.ml
test/unix/os/: dune  main  main.ml
test/unix/ws2812b/: dune  main  main.ml
unikernel/: config.ml  unikernel.ml
