opam-version: "2.0"
name: "rpi"
synopsis: "rpi"
description: "rpi"
maintainer: "Enguerrand Decorne <decorne.en@gmail.com>"
authors: "Enguerrand Decorne <decorne.en@gmail.com>"
license: "MIT"
homepage: "https://github.com/well-typed-lightbulbs/rpi"
doc: "https://github.com/well-typed-lightbulbs/rpi"
bug-reports: "https://github.com/well-typed-lightbulbs/rpi/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "gilbraltar"
]
pin-depends: [
  [ "gilbraltar.dev" "git+https://github.com/dinosaure/gilbraltar" ]
  [ "gilbraltar-toolchain.dev" "git+https://github.com/dinosaure/gilbraltar" ]
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/well-typed-lightbulbs/rpi.git"
