(library
 (name rpi_hardware_unix)
 (public_name rpi.hardware-unix)
 (enabled_if
  (and
   (= %{architecture} arm64)
   (or
    (= %{context_name} "default")
    (= %{context_name} "rpi4_linux"))))
 (libraries rpi.devices fmt)
 (implements rpi.hardware)
 (modules rpi_hardware )
 (foreign_stubs
  (language c)
  (names rpi_unix)))
