(executable
 (name main)
 (enabled_if
  (and
   (= %{architecture} arm64)
   (or
    (= %{context_name} "default")
    (= %{context_name} "rpi4_linux"))))
 (libraries rpi unix rpi.hardware-unix lwt.unix rpi.ws2812b))

(rule
 (targets music.ml)
 (deps
  (source_tree music))
 (action
  (run ocaml-crunch music/ -e bin -o music.ml -m plain)))
